force-app/main/default/objects/Groupable__c.object
<CustomObject>
    <description>This object is used to group its records inside a parent object&apos;s record on the school websites. Practical example: create a Normal Web Content record called &quot;School Facilities&quot; and you want to show a list of facilities inside... then use a series of groupable records to do the trick.</description>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>This field captures the id of any attachment created in its parent record</description>
        <label>Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booklet_1_Link__c</fullName>
        <label>Booklet 1 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booklet_1_Title__c</fullName>
        <label>Booklet 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booklet_2_Link__c</fullName>
        <label>Booklet 2 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booklet_2_Title__c</fullName>
        <label>Booklet 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booklet_3_Link__c</fullName>
        <label>Booklet 3 Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booklet_3_Title__c</fullName>
        <label>Booklet 3 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Subtitle__c</fullName>
        <label>Content Subtitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Attachment_Id__c</fullName>
        <description>Captures the att id of any deleted attachment in its parent record</description>
        <label>Deleted Attachment Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured_Booklets__c</fullName>
        <inlineHelpText>Select 1, 2, 3 or 4 to show the corresponding booklet in the &quot;All Booklets&quot; sidebar block on the website</inlineHelpText>
        <label>Featured Booklets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gallery_Order__c</fullName>
        <inlineHelpText>Use this field to organize photo albums in gallery blocks on the site, ie: Photo Gallery or Visual Tour</inlineHelpText>
        <label>Gallery Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_Photos_in_a_Gallery__c</fullName>
        <inlineHelpText>Select one or more blocks of the website where you want to show the photos of this record.</inlineHelpText>
        <label>Include Photos in Gallery</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photo Gallery</fullName>
                </value>
                <value>
                    <fullName>Visual Tour</fullName>
                </value>
                <value>
                    <fullName>Facilities Sidebar</fullName>
                </value>
                <value>
                    <fullName>Facilities Gallery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuu_Embed_Field__c</fullName>
        <label>Issuu Embed Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the record. This field is used in connection with the school websites</description>
        <inlineHelpText>Select the language of your record.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Text__c</fullName>
        <inlineHelpText>Accepts special tokens like [site:name] to display the name of the school but also other complex tokens such as: [site:mail] [site:current-date] [site:url] [current-page:title] [current-page:url]</inlineHelpText>
        <label>Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Sets the order the groupable is displayed on the site&apos;s view.</description>
        <inlineHelpText>Set this field to determine the order of the groupable record in the parent record&apos;s view on the website.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click to post this record on the School Website</inlineHelpText>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                </value>
                <value>
                    <fullName>Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Web_Tags__c</fullName>
        <inlineHelpText>Select the relevant option to use a special, pre-made page layout in the node. For example: display news the &apos;Online Application&apos; for on a page when choosing &quot;Admissions&quot; or show the &apos;Global Network Map&apos; by choosing &quot;Foundation&quot; etc.</inlineHelpText>
        <label>Webpage Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Jobs</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Testimonials</fullName>
                </value>
                <value>
                    <fullName>Video Gallery</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Booklets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <label>Schools List Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_in_All_Booklets_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in All Booklets Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_id__c</fullName>
        <description>Used to export the record id to the school and group sites</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web id</label>
        <type>Text</type>
    </fields>
    <label>Groupable</label>
    <nameField>
        <label>Groupable Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groupables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>